Changes
=======

Fixes a plugin-check bug