@@ -14,6 +14,7 @@
     BOOL moving;
 	BOOL locked;
     
+  BOOL allowKey;
     NSString *autosaveName;
 	QSTrackingWindow *trackingWindow;
 }
