@@ -973,8 +973,7 @@ indexOfObject:[[self objectValue]identifier]]!=NSNotFound;
 
 
 - (BOOL)performKeyEquivalent:(NSEvent *)theEvent{	
-	
-	if ([[theEvent charactersIgnoringModifiers]isEqualToString:@"\r"]){
+	if ([[theEvent charactersIgnoringModifiers]isEqualToString:@"\r"] && ([theEvent modifierFlags] & NSCommandKeyMask) > 0){
 		[self insertNewline:nil];
 		return YES;
 	}
