@@ -1,4 +1,8 @@
 <h1>Release Notes: Quicksilver Build 3808</h1>
 <h1>Changes</h1>
 
-<p>Fixes a plugin-check bug</p>
+<ul>
+<li>Corrects some visual glitches on Leopard</li>
+<li>Fixes shelf/clipboard behavior in Leopard</li>
+<li>Fixes For Plug-ins and App update</li>
+</ul>
